# mp-orderbook

./: .dockerignore  .gitignore  ADR.md  Dockerfile  LICENSE  README.md  quickstart.sh
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  bench_v2
cpp/bench/: bench_breakdown.cpp  bench_threaded_pinned.cpp  bench_threaded_scaling.cpp  bench_v1.cpp  bench_v2.cpp  histogram.h  perf_stat.sh
cpp/fuzz/: fuzz_v1.cpp  fuzz_v1_rebase.cpp  fuzz_v2.cpp  fuzz_v2_rebase.cpp  workload.h
cpp/include/: flat_hash_map.h  order.h  order_book.h  order_book_v2.h  order_book_v2_ffi.h  spsc_ring.h
cpp/src/: order_book.cpp  order_book_v2.cpp  order_book_v2_ffi.cpp
cpp/tests/: test_order_book.cpp  test_order_book_v2.cpp  test_order_book_v2_ffi_standalone.cpp  test_threaded.cpp
cpp/tests/ffi_mock/matching-engine-sidecar/src/: ffi.rs.h
cpp/tests/ffi_mock/rust/: cxx.h
cpp/tools/: replay_lobster.cpp  replay_lobster_batched.cpp
dashboard/: index.html
data/: README.md
devlog/: 2026-07-17-day-0.md  2026-07-17-day-1-v2-bench-fuzz.md  2026-07-17-day-2-optimize-and-ci.md  2026-07-17-day-3-rigorous-benchmark.md  2026-07-17-day-4-threading.md  2026-07-17-day-5-real-nasdaq-replay.md  2026-07-17-day-6-ffi-fix-risk-dashboard.md  2026-07-17-day-7-real-cpp-dashboard-ffi-verification.md  2026-07-18-day-8-real-cargo-build-namespace-bug.md  2026-07-18-day-8b-second-real-cargo-build-circular-include.md  2026-07-18-day-8c-rust-sidecar-fully-green.md  2026-07-22-day-10-flat-hash-map-and-rebase-verification.md  2026-07-22-day-10-phase-breakdown-and-levels-growth.md  2026-07-22-day-11-real-profiler-alloc-fix.md  2026-07-22-day-9-real-ffi-overhead-measured.md  2026-07-22-day-9b-perf-and-pinning-tools-for-real-hardware.md  README.md
rust/: Cargo.toml  build.rs
rust/src/: ffi.rs  fix.rs  lib.rs  risk.rs
tools/: capture_live_orderbook.py
